5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1791_1599.log
== TEST (2019-05-29 14:15:18) 
-- CODE:
from numpy import*

custo = array(eval(input(""))

while [custo]>80:
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
File "XXXX", line 5
    while [custo]>80:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:15:38) 
-- CODE:
from numpy import*

custo = array(eval(input(""))

while (custo>=80):
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
File "XXXX", line 5
    while (custo>=80):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:15:54) 
-- CODE:
from numpy import*

custo = array(eval(input(""))

while (custo> 0):
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
File "XXXX", line 5
    while (custo> 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:07) 
-- CODE:
from numpy import*

custo = array(eval(input(""))

while (custo>80):
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
File "XXXX", line 5
    while (custo>80):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:15) 
-- CODE:
from numpy import*

custo = array(eval(input(""))

while (custo)> 80):
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
File "XXXX", line 5
    while (custo)> 80):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:28) 
-- CODE:
from numpy import*

custo = array(eval(input("")))

while (custo)> 80):
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
File "XXXX", line 5
    while (custo)> 80):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:35) 
-- CODE:
from numpy import*

custo = array(eval(input("")))

while (custo)> 80:
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:11) 
-- CODE:
from numpy import*

custo = array(eval(input("")))

while [custo] >= 80:
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:38) 
-- CODE:
from numpy import*

custo = array(eval(input("")))

while [custo] >= 80.0:
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:22) 
-- CODE:
from numpy import*

custo = array(eval(input("")))

while [custo] >= 80.0:
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:38) 
-- CODE:
from numpy import*

custo = array(eval(input("")))

while custo >= 80.0:
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:43) 
-- CODE:
from numpy import*

custo = array(eval(input("")))

while custo >= 80.0:
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:05) 
-- CODE:
from numpy import*

custo = array(eval(input("")))
i=0
while custo >= 80.0:
	custototal = sum(custo)* 15/100
	i = custo + 1
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:31) 
-- CODE:
from numpy import*

custo = array(eval(input("")))
i=0
while [custo] >= 80.0:
	custototal = sum(custo)* 15/100
	i = custo + 1
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:50) 
-- CODE:
from numpy import*

custo = array(eval(input("")))
i=0
while [custo] > 80.0:
	custototal = sum(custo)* 15/100
	i = custo + 1
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:03) 
-- CODE:
from numpy import*

custo = array(eval(input("")))

while [custo] > 80.0:
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:12) 
-- CODE:
from numpy import*

custo = array(eval(input("")))

if [custo] > 80.0:
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:34) 
-- CODE:
from numpy import*

custo = array(eval(input("")))

if [custo] > 80:
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:21:06) 
-- CODE:
from numpy import*

custo = array(eval(input("")))

if custo > 80:
	custototal = sum(custo)* 15/100
	print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:40) 
-- CODE:
from numpy import*

custo = array(eval(input("")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:49) 
-- CODE:
from numpy import*

custo = array(eval(input("")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
